--- a/DeciderApp/Base.lproj/Main.storyboard
+++ b/DeciderApp/Base.lproj/Main.storyboard
@@ -3,12 +3,12 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DeciderApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
@@ -21,6 +21,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="206" y="149"/>
         </scene>
@@ -73,13 +74,73 @@
                     <view key="view" contentMode="scaleToFill" id="DUS-J1-08s">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="jUV-dh-M7M">
+                                <rect key="frame" x="0.0" y="132" width="560" height="348"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdF-Ms-NhF">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="Add Friends"/>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YqU-jE-k4p">
+                                        <rect key="frame" x="0.0" y="44" width="560" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iv0-4N-aH7">
+                                        <rect key="frame" x="0.0" y="88" width="560" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <datePicker contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="MFt-bn-9a8">
+                                        <rect key="frame" x="0.0" y="132" width="560" height="216"/>
+                                        <animations/>
+                                        <date key="date" timeIntervalSinceReferenceDate="469491262.03441501">
+                                            <!--2015-11-17 22:14:22 +0000-->
+                                        </date>
+                                    </datePicker>
+                                </subviews>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstItem="iv0-4N-aH7" firstAttribute="leading" secondItem="jUV-dh-M7M" secondAttribute="leading" id="6Su-rS-3Ed"/>
+                                    <constraint firstAttribute="trailing" secondItem="iv0-4N-aH7" secondAttribute="trailing" id="6cM-Km-ima"/>
+                                    <constraint firstAttribute="trailing" secondItem="YqU-jE-k4p" secondAttribute="trailing" id="DzS-Un-Kxj"/>
+                                    <constraint firstItem="cdF-Ms-NhF" firstAttribute="leading" secondItem="jUV-dh-M7M" secondAttribute="leading" id="Lim-G8-4hE"/>
+                                    <constraint firstAttribute="trailing" secondItem="cdF-Ms-NhF" secondAttribute="trailing" id="Pd6-qz-50J"/>
+                                    <constraint firstItem="YqU-jE-k4p" firstAttribute="leading" secondItem="jUV-dh-M7M" secondAttribute="leading" id="k30-IB-kF1"/>
+                                    <constraint firstItem="MFt-bn-9a8" firstAttribute="leading" secondItem="jUV-dh-M7M" secondAttribute="leading" id="orv-BT-wOp"/>
+                                    <constraint firstAttribute="trailing" secondItem="MFt-bn-9a8" secondAttribute="trailing" id="yzA-2G-DPz"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jUV-dh-M7M" firstAttribute="leading" secondItem="DUS-J1-08s" secondAttribute="leadingMargin" id="3Xy-TX-cdO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="jUV-dh-M7M" secondAttribute="trailing" id="YwB-Gn-7oN"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Create Event" id="KNJ-AP-5rr">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="aAe-SS-feu"/>
-                        <barButtonItem key="rightBarButtonItem" title="Create" id="KVG-M4-61m"/>
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="aAe-SS-feu">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="Dgv-yq-uaZ" id="lm9-nY-7d9"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Create" id="KVG-M4-61m">
+                            <connections>
+                                <action selector="createEventButtonPressed:" destination="Dgv-yq-uaZ" id="yvL-EP-N9k"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="addFriendsButtonPressed" destination="cdF-Ms-NhF" id="gDL-Ez-NRI"/>
+                        <outlet property="datePicker" destination="MFt-bn-9a8" id="IBr-Rn-Qd4"/>
+                        <outlet property="descriptionTextField" destination="iv0-4N-aH7" id="btk-OC-DZv"/>
+                        <outlet property="titleTextField" destination="YqU-jE-k4p" id="rWH-UD-fVk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qRw-ZI-pbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
