--- a/DeciderApp/Base.lproj/Main.storyboard
+++ b/DeciderApp/Base.lproj/Main.storyboard
@@ -19,35 +19,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nv-Sg-dF5">
-                                <rect key="frame" x="281" y="20" width="38.5" height="20.5"/>
+                                <rect key="frame" x="281" y="72" width="38.5" height="20.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Rd-dV-sHI">
-                                <rect key="frame" x="256" y="48" width="88" height="20.5"/>
+                                <rect key="frame" x="256" y="100" width="88" height="20.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DateTime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="As8-j3-m4w">
-                                <rect key="frame" x="264" y="77" width="72.5" height="20.5"/>
+                                <rect key="frame" x="264" y="129" width="72.5" height="20.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vote for your favorite option:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNH-l1-iLM">
-                                <rect key="frame" x="191" y="105.5" width="218" height="20.5"/>
+                                <rect key="frame" x="191" y="157.5" width="218" height="20.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YlY-Vz-i5b">
-                                <rect key="frame" x="0.0" y="133.5" width="600" height="382.5"/>
+                                <rect key="frame" x="0.0" y="185.5" width="600" height="368.5"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.94581732429999998" green="0.94581732429999998" blue="0.94581732429999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EjN-8Y-h6U">
@@ -79,7 +79,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🤑" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rtu-aD-mca">
-                                                    <rect key="frame" x="348" y="30.5" width="32" height="38.5"/>
+                                                    <rect key="frame" x="348" y="30" width="32" height="38.5"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -114,19 +114,11 @@
                                 </cells>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JhR-Ou-8Tp">
-                                <rect key="frame" x="284" y="524" width="32" height="30"/>
+                                <rect key="frame" x="284" y="562" width="32" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Vote"/>
                                 <connections>
                                     <action selector="voteButtonPressed:" destination="wre-Q1-KS3" eventType="touchUpInside" id="ShF-nG-JGe"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rF9-fZ-E70">
-                                <rect key="frame" x="276" y="562" width="48" height="30"/>
-                                <animations/>
-                                <state key="normal" title="Cancel"/>
-                                <connections>
-                                    <action selector="cancelButtonPressed:" destination="wre-Q1-KS3" eventType="touchUpInside" id="bvW-Fr-iqd"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -138,31 +130,20 @@
                             <constraint firstItem="4Rd-dV-sHI" firstAttribute="top" secondItem="6nv-Sg-dF5" secondAttribute="bottom" constant="8" symbolic="YES" id="CDn-3c-2Rm"/>
                             <constraint firstItem="JhR-Ou-8Tp" firstAttribute="top" secondItem="YlY-Vz-i5b" secondAttribute="bottom" constant="8" symbolic="YES" id="Dk6-Ei-44U"/>
                             <constraint firstItem="YlY-Vz-i5b" firstAttribute="top" secondItem="pNH-l1-iLM" secondAttribute="bottom" constant="8" symbolic="YES" id="Dw3-Mg-Wss"/>
-                            <constraint firstItem="4Ss-1M-zzw" firstAttribute="top" secondItem="rF9-fZ-E70" secondAttribute="bottom" constant="8" symbolic="YES" id="OdQ-zg-zPC"/>
+                            <constraint firstItem="JhR-Ou-8Tp" firstAttribute="centerX" secondItem="8kR-0d-YPZ" secondAttribute="centerX" id="Ffa-qs-wU4"/>
                             <constraint firstItem="As8-j3-m4w" firstAttribute="centerX" secondItem="pNH-l1-iLM" secondAttribute="centerX" id="POV-fW-VA6"/>
-                            <constraint firstItem="rF9-fZ-E70" firstAttribute="top" secondItem="JhR-Ou-8Tp" secondAttribute="bottom" constant="8" symbolic="YES" id="UUT-yx-7Op"/>
+                            <constraint firstItem="4Ss-1M-zzw" firstAttribute="top" secondItem="JhR-Ou-8Tp" secondAttribute="bottom" constant="8" symbolic="YES" id="RiM-3d-1lp"/>
                             <constraint firstItem="6nv-Sg-dF5" firstAttribute="centerX" secondItem="4Rd-dV-sHI" secondAttribute="centerX" id="UXK-x9-frY"/>
                             <constraint firstItem="As8-j3-m4w" firstAttribute="top" secondItem="4Rd-dV-sHI" secondAttribute="bottom" constant="8" symbolic="YES" id="Va8-2J-NHN"/>
                             <constraint firstAttribute="trailing" secondItem="YlY-Vz-i5b" secondAttribute="trailing" id="WTk-FU-Y6Z"/>
-                            <constraint firstItem="6nv-Sg-dF5" firstAttribute="centerX" secondItem="4Rd-dV-sHI" secondAttribute="centerX" id="bdb-WB-l0u"/>
-                            <constraint firstItem="JhR-Ou-8Tp" firstAttribute="centerX" secondItem="rF9-fZ-E70" secondAttribute="centerX" id="bfY-bm-yyu"/>
-                            <constraint firstItem="4Rd-dV-sHI" firstAttribute="centerX" secondItem="As8-j3-m4w" secondAttribute="centerX" id="d2E-lL-Pwl"/>
                             <constraint firstItem="YlY-Vz-i5b" firstAttribute="leading" secondItem="8kR-0d-YPZ" secondAttribute="leading" id="gm0-lB-4Ag"/>
-                            <constraint firstItem="6nv-Sg-dF5" firstAttribute="top" secondItem="5LX-ml-9jO" secondAttribute="bottom" id="j81-UJ-3L8"/>
+                            <constraint firstItem="6nv-Sg-dF5" firstAttribute="top" secondItem="5LX-ml-9jO" secondAttribute="bottom" constant="8" symbolic="YES" id="j81-UJ-3L8"/>
                             <constraint firstItem="4Rd-dV-sHI" firstAttribute="centerX" secondItem="As8-j3-m4w" secondAttribute="centerX" id="q5I-ln-DX7"/>
-                            <constraint firstItem="rF9-fZ-E70" firstAttribute="centerX" secondItem="8kR-0d-YPZ" secondAttribute="centerX" id="wVm-Ix-zVI"/>
                             <constraint firstItem="4Rd-dV-sHI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8kR-0d-YPZ" secondAttribute="leadingMargin" constant="8" id="xhE-69-nOE"/>
                             <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="4Rd-dV-sHI" secondAttribute="trailing" constant="8" id="yfY-AT-NJE"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="d2E-lL-Pwl"/>
-                                <exclude reference="bdb-WB-l0u"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
-                        <outlet property="cancelButton" destination="rF9-fZ-E70" id="pKn-fr-2Qs"/>
                         <outlet property="dateTimeLabel" destination="As8-j3-m4w" id="6Rz-Pw-XOf"/>
                         <outlet property="descriptionLabel" destination="4Rd-dV-sHI" id="DYQ-sn-BZp"/>
                         <outlet property="titleLabel" destination="6nv-Sg-dF5" id="ta2-Jd-eML"/>
@@ -194,7 +175,7 @@
                                 </tableViewCellContentView>
                                 <animations/>
                                 <connections>
-                                    <segue destination="wre-Q1-KS3" kind="presentation" identifier="DecisionDetailViewController" id="DfY-Bq-AIy"/>
+                                    <segue destination="wre-Q1-KS3" kind="show" identifier="DecisionDetailViewController" id="DfY-Bq-AIy"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
